# generic-ml-cache

./: .coveragerc  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  pyrightconfig.json  sonar-project.properties
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-hygiene.yml  release.yml  sonar.yml
docs/: README.md  ROADMAP.md  SPEC.md  api.tape  async.tape  client-mapping.md  compatibility.md  daemon.tape  demo.tape  design.md  domain-model.md  encrypt.tape  grants.md  help.tape  inspect.tape  purge.tape  render-tape.py  session-spec.tape  sessions.tape  shell-integration.md  storage.md  usage.md
docs/architecture/: adapter-contract.md  execution-engine.md  storage-model.md
docs/concepts/: adapters.md  alias-mode.md  asynchronous-executions.md  cache-eviction.md  cassettes.md  cost-and-usage.md  execution-requests.md  executions.md  grants.md  observability.md  retention.md  scopes-and-sessions.md  sessions.md
docs/design/: data-handling.md  positioning.md
docs/future/: api-adapters.md  daemon-transport.md  retention-and-invalidation.md
docs/reference/: cassette-schema.md  cli.md  configuration.md  grants.md
docs/tapes/: api.tape  async.tape  daemon.tape  demo.tape  encrypt.tape  evict-lru.tape  evict-stale.tape  help.tape  inspect.tape  purge.tape  session-spec.tape  sessions.tape
docs/use-cases/: ci-cd.md  cost-and-usage-analysis.md  provider-and-model-experiments.md  workflow-engines.md
scripts/: format-status-line.py  launch-claude.ps1  launch-claude.sh
src/generic_ml_cache/: __init__.py  __main__.py  access_registry.py  cache.py  captured_file.py  cassette.py  cli.py  config.py  (+13 more)
tests/: conftest.py  fake_client.py  test_adapters.py  test_allow_path.py  test_api_call_identity.py  test_api_client_port.py  test_artifact.py  test_blob_store_port.py  test_cache_mode.py  test_cacheability.py  test_call_identity.py  test_call_identity_building.py  test_call_identity_serialization.py  test_cassette.py  test_check.py  test_checksum.py  test_cli.py  test_client_run_request.py  test_client_run_result.py  test_client_runner_port.py  test_clock_port.py  test_composition.py  test_config.py  test_discover.py  test_effort.py  test_eviction.py  test_execution_failure.py  test_execution_kind.py  test_execution_output.py  test_execution_repository.py  test_execution_state.py  test_file_content_fingerprint.py  test_file_fingerprint_port.py  test_filesystem_blob_store.py  test_grants.py  test_immutable.py  test_input_files.py  test_interrupt.py  test_journal_metrics.py  test_local_client_runner.py  (+32 more)
(+70 files in other folders)
